# Transflow

./: .gitignore  CLAUDE.md  next.config.ts  package-lock.json  package.json
Documentation/: API_REFERENCE.md  SCREEN_API_MAPPING.md  api-types.txt  command-palette-ux-spec.md  component-patterns.md  file-map.md  swagger-docs.json
Documentation/Doc_V2/: API_REFERENCE_v2.md  SCREEN_API_MAPPING_v2.md  WIREFRAME_PLAN_v2.md
Documentation/Integration v3/: API_REFERENCE_v3.md  SCREEN_API_MAPPING_v3.md  WIREFRAME_PLAN_v3.md
Documentation/testing/: MASTER_PLAN.md  PHASE_1_MASTER_DATA.md  PHASE_2_PURCHASE_FLOW.md  PHASE_3_SALE_FLOW.md  PHASE_4_PAYMENT_FLOWS.md  PHASE_5_RETURN_FLOWS.md  PHASE_6_TRANSFERS_ADJUSTMENTS.md  PHASE_7_REPORTS.md  PHASE_8_CROSS_MODULE_CONSISTENCY.md
Documentation/testing/notion-data/: phase-1-master-data.json  phase-2-purchase-flow.json  phase-3-sale-flow.json  phase-4-payment-flows.json  phase-5-return-flows.json  phase-6-transfers-adjustments.json  phase-7-reports.json  phase-8-cross-module-consistency.json  schema.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: globals.css
src/app/(admin)/: layout.tsx  page.tsx
src/components/auth/: AuthGuard.tsx  SignInForm.tsx  (+1 more)
src/context/: AuthContext.tsx
src/data/: suppliers.ts
src/layout/: AppHeader.tsx  AppSidebar.tsx
src/lib/: api.ts  commandResolver.ts  customers.ts  dashboard.ts  expenseCategories.ts  expenses.ts  paymentAccounts.ts  products.ts  reports.ts  search.ts  suppliers.ts
(+65 files in other folders)
