[package]
name = "transflow"
version = "0.1.0"
description = "TransFlow - Admin Dashboard Desktop App"
authors = ["you"]
license = ""
repository = ""
default-run = "transflow"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "transflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "transflow"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
